[tool.poetry]
name = "sdcat"
version = "1.9.0"
description = "Sliced Detection and Clustering Analysis Toolkit - Developed by MBARI"
authors = [
    "Danelle Cline <dcline@mbari.org>",
    "Duane Edgington <duane@mbari.org>",
    "Fernanda Lecaros Saavedra <fernandalecaros@mbari.org>",
]
license = "Apache"
readme = "README.md"
packages = [
    { include = "sdcat" }
]
exclude = ["sdcat/tests"]

[tool.poetry.scripts]
sdcat = "sdcat.__main__:cli"

[tool.semantic_release]
branch = "main"
upload_to_PyPI = false
upload_to_release = true
version_variable = [
    "sdcat/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pillow = "^10.4.0"
bs4 = "^0.0.2"
opencv-contrib-python-headless = "^4.10.0.84"
sahi = "^0.11.18"
mmdet = "2.21.0"
mmengine = "0.7.2"
click = "^8.1.7"
hdbscan = ">=0.8.27"
torch = "2.3.1"
piexif = "^1.1.3"
yolov5 = "7.0.13"
torchvision = "0.18.1"
transformers = "^4.42.4"
timm = "^1.0.7"
pandas = ">=1.2.4"
ultralytics = "^8.2.57"
scikit-learn = "1.4.0rc1"
scikit-image = "^0.24.0"
umap-learn = "0.5.5"
matplotlib = "3.7.0"
numba = "0.57"
ephem = "^4.1.5"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
twine = "^5.1.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["sdcat/tests",]
pythonpath = ["."]

[tool.ruff]
line-length = 125